--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>4.29.3</version>
+<!--            <version>3.24.1</version>-->
         </dependency>
 
         <dependency>
@@ -48,7 +49,11 @@
 
     <build>
 
-        <sourceDirectory>${project.basedir}/target/generated-sources/protobuf/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
 
         <extensions>
             <extension>
@@ -57,24 +62,8 @@
                 <version>1.7.0</version>
             </extension>
         </extensions>
+
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <compileSourceRoots>
-                        <compileSourceRoot>${project.basedir}/target/generated-sources/protobuf/java</compileSourceRoot>
-                    </compileSourceRoots>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
@@ -87,6 +76,8 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>proto-compile</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>compile</goal>
                             <goal>compile-custom</goal>
@@ -94,6 +85,57 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+
+                <configuration>
+                    <mainClass>com.example.grpc.GrpcApplication</mainClass>
+                </configuration>
+            </plugin>
+
+            <!-- Plugin für zusätzliche Quellen (damit src/main/java + Protobuf beachtet werden) -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/protobuf/java</source>
+                                <source>src/main/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <compileSourceRoots>
+                        <compileSourceRoot>${project.basedir}/target/generated-sources/protobuf/java</compileSourceRoot>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </compileSourceRoots>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
