--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,19 @@
         </dependency>
 
         <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>4.29.3</version>
@@ -82,10 +95,27 @@
                 <artifactId>protobuf-maven-plugin</artifactId>
                 <version>0.6.1</version>
                 <configuration>
+                    <pluginParameter>
+                    generated=omit
+                    </pluginParameter>
                     <protocArtifact>com.google.protobuf:protoc:4.29.3:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.50.2:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.70.0:exe:${os.detected.classifier}</pluginArtifact>
+
+                    <!--                    <protocPlugins>-->
+                    <!--                        <protocPlugin>-->
+                    <!--                            <id>grpc-java</id>-->
+                    <!--                            <groupId>io.grpc</groupId>-->
+                    <!--                            <artifactId>protoc-gen-grpc-java</artifactId>-->
+                    <!--                            <version>1.70.0</version>-->
+                    <!--                            <classifier>${os.detected.classifier}</classifier>-->
+                    <!--                        </protocPlugin>-->
+                    <!--                        <protocArguments>-->
+                    <!--                            <argument>&#45;&#45;java_out=annotate_code=false:target/generated-sources/protobuf/java</argument>-->
+                    <!--                        </protocArguments>-->
+                    <!--                    </protocPlugins>-->
                 </configuration>
+
                 <executions>
                     <execution>
                         <id>proto-compile</id>
@@ -102,7 +132,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <!--                    <mainClass>com.example.grpc.GrpcApplication</mainClass>-->
                 </configuration>
             </plugin>
 
